--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
             <li class="hidden-xs"><a href="/">Home</a></li>
             <li class="hidden-xs"><a href="/profile" [routerLink]="['/profile']">Profile</a></li>
             <li class="hidden-xs"><a href="/library" [routerLink]="['/library']">Library</a></li>
-            <li class="hidden-xs"><a href="#">Signin</a></li>
+            <li class="hidden-xs"><a href="#" (click)="login()">Signin</a></li>
             <li class="active visible-xs" data-toggle="collapse" data-target=".navbar-collapse"><a href="/">Home</a></li>
             <li class="visible-xs" data-toggle="collapse" data-target=".navbar-collapse"><a href="/profile" [routerLink]="['/profile']">Profile</a></li>
             <li class="visible-xs" data-toggle="collapse" data-target=".navbar-collapse"><a href="/library" [routerLink]="['/library']">Library</a></li>
